# nba_injury_bor

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/: injury_report.json
src/: fetch_report.py  main.py  postx.py  request_report.py
tests/: test_request_report.py
