[tool.poetry]
name = "nba-injury-bot"
version = "0.1.0"
description = ""
authors = ["Mateus Kasuya <mateusvbkasuya@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
python = ">=3.12,<3.13"

[tool.poetry.dependencies]
requests = ">=2.32.3,<3.0.0"
tzdata = ">=2025.2,<2026.0"
pypdf = ">=5.4.0,<6.0.0"
tweepy = ">=4.15.0,<5.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ruff = "^0.11.6"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
fix = "ruff check . --fix"
test = "poetry run pytest tests -v"
run = "poetry run python -m src.main"
format = "ruff format"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
